# PyPiPackagingTutorial

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/example_package_adent/: __init__.py
