[project]
name = "example_package_adentinger"
version = "0.0.1"
authors = [
  { name="Anthony Dentinger", email="22079861+adentinger@users.noreply.github.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/adentinger/PyPiPackagingTutorial"
Issues = "https://github.com/adentinger/PyPiPackagingTutorial/issues"

[build-system]
requires = ["pdm-backend >= 2.4.0"]
build-backend = "pdm.backend"
